fixed overflow bug

--- a/main.css
+++ b/main.css
@@ -4,15 +4,15 @@
 	position:fixed;
 	width:60px;
 	height:60px;
-	bottom:40px;
-	right:40px;
+    bottom: 20px;
+    right: 20px; 
 	background-color:#25d366;
 	color:#FFF;
 	border-radius:50px;
 	text-align:center;
     font-size:30px;
 	box-shadow: 2px 2px 3px #999;
-    z-index:100;
+    z-index:2;
 }
 
 .my-float{
@@ -56,6 +56,7 @@
 
 body {
     overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 
@@ -148,11 +149,28 @@ body {
 
    /** Contato **/
 
+   #contato {
+    overflow: hidden;
+  }
+  
+  /* For the map iframe */
+  #contato .row .col-md-6 iframe {
+    max-width: 100%;
+  }
+  
+  /* For the contact information div */
+  #contato .row .col-md-6 .bd-example {
+    max-width: 100%;
+    overflow: hidden;
+  }
 
    /** Media Queries **/
 
 @media (min-width: 576px) { 
-   
+    body {
+        overflow-x: hidden;
+      }
+      
 }
 
 @media (min-width: 768px) { 
